Punto de control: Se corrige docker-compose.

--- a/eneslab/docker-compose.yml
+++ b/eneslab/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   jupyter:
     build: 
-      contex: .
+      context: .
       dockerfile: Dockerfile
     ports:
       - "8888:8888"
